--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 
 </head>
 
+
+
 <body>
+    <nav>
+        <img src="img/lambda-black.png" alt="strategy">
+        <a href="#">Home</a>
+        <a href="about.html">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+    </nav>
+
+    <header>
+        <img src="img/jumbo.jpg" alt="strategy">
+    </header>
+
     <div class="container">
    
         <section class="top-content">
