linked pages, styled nav and header, colored boxes.

--- a/about.html
+++ b/about.html
@@ -20,6 +20,10 @@
   <a href="#">Contact</a>
 </nav>
 
+<header>
+  <img src="img/jumbo-about.png" alt="strategy">
+</header>
+
 <body>
     <div class="container about-page">
      
