--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
           diversity and empowerment.</p>
       </div>
 
-      <div class="flex-container">
+        <section class="flex-container">
           <div class="Strategy">
 
             <img src="img/about-plan.png" alt="strategy">
@@ -81,7 +81,7 @@
 
             <button>Learn More</button>
           </div>
-      </div>
+        </section>
 
       <div class="Together">
 
