Comments in about.html and index.css

--- a/about.html
+++ b/about.html
@@ -83,6 +83,8 @@
           </div>
         </section>
 
+        <!-- ^ For the smaller divs above, rather than giving them different classes like "Strategy", "HWW", etc, I would give them all the same class - this is because they are all styled the exact same way, and results in less code for you to worry about in your CSS file. -->
+
       <div class="Together">
 
         <h2>Let's Work Together</h2>
